# ali_face_engine_cplusplus_demo

./: .gitignore  Condition.h  Mutex.h  Thread.h  ali_face_engine.config  archive.sh  common.h
ali_face_engine_sdk/Darwin/include/: FaceAttributeAnalyze.h  FaceEngine.h  FaceRecognize.h  FaceRecognizeNoDB.h  FaceVerify.h  Tools.h  type.h
ali_face_engine_sdk/Linux/include/: Codec.h  FaceEngine.h  FaceEngineConfig.h  FaceRecognize.h  FaceRecognizeNoDB.h  FaceRegister.h  FeatureExtract.h  Tools.h  type.h
ali_face_engine_sdk/Windows/x64/: AliFaceEngine.lib
ali_face_engine_sdk/Windows/x64/include/: Codec.h  FaceDetect.h  FaceEngine.h  FaceRecognize.h  FaceRegister.h  FeatureExtract.h  Tools.h  type.h
ali_face_engine_sdk/Windows/x86/: AliFaceEngine.lib
ali_face_engine_sdk/Windows/x86/include/: Codec.h  FaceEngine.h  FaceRecognizeNoDB.h  FaceRegister.h  Tools.h  type.h
codec_demo/: CMakeLists.txt  create_vs2015_x86_project.sh  demo.cpp
face_detect_camera_demo/: CMakeLists.txt  ali_face_engine.config  build_linux.sh  demo.cpp
face_detect_demo/: demo.cpp
face_detect_mp4_demo/: demo.cpp
face_detect_picture/: demo.cpp
face_detect_picture_demo/: CMakeLists.txt  ali_face_engine.config  demo.cpp
face_detect_picture_withoutcv_demo/: CMakeLists.txt  demo.cpp
face_detect_video_demo/: create_vs2015_win64_project.sh  demo.cpp
face_extract_feature_demo/: demo.cpp
face_recognize_camera_demo/: demo.cpp
face_recognize_demo/: demo.cpp
face_recognize_mp4_demo/: clean.sh  demo.cpp
face_recognize_picture_demo/: ali_face_engine.config  create_vs2015_x86_project.sh  demo.cpp
face_recognize_picture_sequence_demo/: CMakeLists.txt  demo.cpp
face_recognize_video_demo/: CMakeLists.txt  demo.cpp
face_verify_camera_demo/: demo.cpp
face_verify_demo/: demo.cpp
face_verify_picture_demo/: demo.cpp
face_verify_video_demo/: demo.cpp
tool_compare_features/: CMakeLists.txt  demo.cpp
